--- a/style.css
+++ b/style.css
@@ -8,7 +8,19 @@ body {
     margin: 0;
 }
 
+a{
+    text-decoration: none;
+    color: inherit;
+    font-weight: bold;
+    padding: 10px;
+    border: solid 2px white;
+    border-radius: 10px;
+}
 
+a:hover {
+    background-color: white;
+    color: black;
+}
 
  nav {
 	display: flex;
@@ -16,12 +28,13 @@ body {
 	justify-content: space-between;
 	align-items: center;
     padding-inline: 10px;
-    background: linear-gradient(#220101, #210707, #130909);
-   
+    background-color: black;
+    /*background: linear-gradient(#220101, #210707, #130909);*/
+    color: white;
 }
 
 nav h1 {
-    color: var(--red);
+    
     align-content: center;
 }
 .logo-nav {
@@ -35,7 +48,11 @@ nav ul {
     align-items: center;
     gap: 20px;
     list-style: none;
-    color: white;
+    
+}
+
+nav ul li {
+    cursor: pointer;
 }
 
 
@@ -46,13 +63,14 @@ header {
     justify-content: space-around;
     align-items: center;
     background-color: #a33737;
-    background: linear-gradient(#130909, #210707, #220101);
+    /*background: linear-gradient(#130909, #210707, #220101);*/
+    background-color: rgb(197, 3, 3);
     color: white;
 }
 
 header img {
     border-radius: 100px;
-    width: 100px;
+    box-shadow: 5px 5px 0px rgb(28, 26, 26);
 }
 
 button {
@@ -65,23 +83,39 @@ button {
 }
 
 button:hover {
-    background: linear-gradient(#790101, #430202, #1d0101);
-    
+   /* background: linear-gradient(#790101, #430202, #1d0101);*/
+   background-color: red;
 }
 
 
-
-
-
 .apropos {
-    padding: 40px;
+    padding: 60px 40px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    background-color: rgb(197, 3, 3);
+}	
+
+.apropos-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    color: white;
-    background: linear-gradient(#130909, #210707, #220101);
-}	
+    gap: 20px;
+}
+.apropos-img{
+    display: flex;
+    flex-direction: column;
+}
+
+.villa-image {
+    
+    border-radius: 10px;
+    box-shadow: 5px 0px 5px 5px rgb(28, 26, 26);
+}
 
 footer {
     padding: 20px;
@@ -90,7 +124,7 @@ footer {
     justify-content: space-around;
     align-items: center;
     /*background: linear-gradient(#130909, #210707, #220101);*/
-    background-color: white;
-    
+    background-color: black;
+    color: white;
     
 }
