--- a/style.css
+++ b/style.css
@@ -6,13 +6,14 @@
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
+    padding: 0;
 }
 
 a{
     text-decoration: none;
     color: inherit;
     font-weight: bold;
-    padding: 10px;
+    padding: 5px;
     border: solid 2px white;
     border-radius: 10px;
 }
@@ -34,7 +35,7 @@ a:hover {
 }
 
 nav h1 {
-    
+  
     align-content: center;
 }
 .logo-nav {
@@ -48,30 +49,31 @@ nav ul {
     align-items: center;
     gap: 20px;
     list-style: none;
-    
 }
 
 nav ul li {
     cursor: pointer;
 }
 
-
 header {
     padding: 40px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    background-color: #a33737;
-    /*background: linear-gradient(#130909, #210707, #220101);*/
-    background-color: rgb(197, 3, 3);
+    height: 800px;
+    font-size: larger;
+    background-image: url(./images/villa-nuit.jpg);
+    background-size: cover;
     color: white;
 }
 
-header img {
-    border-radius: 100px;
-    box-shadow: 5px 5px 0px rgb(28, 26, 26);
+
+header h2{
+font-size: 50px;
 }
+
+
 
 button {
     background-color: inherit;
@@ -87,32 +89,71 @@ button:hover {
    background-color: red;
 }
 
-
-.apropos {
-    padding: 60px 40px;
+.activites ul {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+  }
+  
+  .activites li {
+    list-style: none;
+    flex-basis: calc(25% - 40px);
+  }
+  
+  .activites h4 {
+    font-size: 15px;
+  }
+  
+  .activites p {
+    font-size: 15px;
+    padding: 10px;
+    border-right: solid 1px black;
+    border-bottom: solid 1px black;
+  }
+  
+  .activites i {
+    color: #c21a1a;
+    background-color: #f1bdbd;
+    padding: 12px;
+    border-radius: 15px;
+  }
+ 
+
+
+.apropos {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     color: white;
-    background-color: rgb(197, 3, 3);
-}	
-
-.apropos-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    gap: 20px;
-}
-.apropos-img{
-    display: flex;
-    flex-direction: column;
+    background-color: rgb(168, 22, 22);
+    padding: 40px;
 }
 
-.villa-image {
-    
+
+.apropos p {
+    max-width: 500px;
+    border-left: solid 2px white;
+    padding-left: 10px;
+}
+
+.apropos img{
+    border-radius: 20px;
+    width: 350px;
+    box-shadow: 5px 0px 5px 5px rgb(28, 26, 26);
+}
+
+
+  
+  
+
+
+
+.Presentation-img img {  
+    width: 400px;
     border-radius: 10px;
     box-shadow: 5px 0px 5px 5px rgb(28, 26, 26);
 }
@@ -126,5 +167,19 @@ footer {
     /*background: linear-gradient(#130909, #210707, #220101);*/
     background-color: black;
     color: white;
-    
+}
+
+footer h3{
+    font-size: 22px;
+}
+
+footer ul li{
+    list-style: none;
+}
+
+/* Media query pour les écrans de largeur maximale de 600px (version mobile) */
+@media (max-width: 600px) {
+  .activites li {
+    flex-basis: calc(80% - 40px);
+  }
 }
